infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client
    spec: 
      containers:
        - name: client
          image: anthonyvestsage/react-client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  type: ClusterIP
  selector: 
      app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
