infra/k8s/event-bus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: NodePort
  selector: 
     app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
