infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: moderation

  template:
    metadata:
      labels:
        app: moderation
    spec: 
      containers:
        - name: moderation
          image: anthonyvestsage/moderation-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  type: ClusterIP
  selector: 
      app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
