infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: query

  template:
    metadata:
      labels:
        app: query
    spec: 
      containers:
        - name: query
          image: anthonyvestsage/query-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  type: ClusterIP
  selector: 
      app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
